@@ -8,6 +8,7 @@
 * Moved combinators to kernel.rb.
 * Removed definitions.rb (all words are now defined in kernel.rb).
 * Performance improvement: stack is never copied.
+* Performance improvement: no symbol/string conversion when processing words.
 * Added ~ operator (call, unquote) for Symbols and Arrays. Removed Array#unquote and Symbol#unquote
 * Added Symbol#<= to define words and Symbol#/ to concatenate them.
 * Removed Symbol#define (use Symbol#<= instead)
